--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,17 @@
 ## Build generated
 build/
 DerivedData/
-
+*.DS_Store
+*xcuserdata
+*xcshareddata
+*.xcuserstate
+*xcdebugger
+*.xcuserdata
+*.xccheckout
+*.svn
+*xcshareddata
+/output
+*.idea/
 ## Various settings
 *.pbxuser
 !default.pbxuser
