--- a/YueBallSport/YueBallSport/Info.plist
+++ b/YueBallSport/YueBallSport/Info.plist
@@ -37,5 +37,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
