--- a/YueBallSport/YueBallSport/Info.plist
+++ b/YueBallSport/YueBallSport/Info.plist
@@ -14,6 +14,8 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+    <key>NSContactsUsageDescription</key>
+    <string>contactsDesciption</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -62,40 +64,37 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-<key>LSApplicationQueriesSchemes</key>
-<array>
-    <!--微博白名单-->
-    <string>sinaweibohd</string>
-    <string>sinaweibo</string>
-    <string>weibosdk</string>
-    <string>weibosdk2.5</string>
-    <!--QQ、Zone白名单-->
-    <string>mqqapi</string>
-    <string>mqq</string>
-    <string>mqqOpensdkSSoLogin</string>
-    <string>mqqconnect</string>
-    <string>mqqopensdkdataline</string>
-    <string>mqqopensdkgrouptribeshare</string>
-    <string>mqqopensdkfriend</string>
-    <string>mqqopensdkapi</string>
-    <string>mqqopensdkapiV2</string>
-    <string>mqqopensdkapiV3</string>
-    <string>mqzoneopensdk</string>
-    <string>wtloginmqq</string>
-    <string>wtloginmqq2</string>
-    <string>mqqwpa</string>
-    <string>mqzone</string>
-    <string>mqzonev2</string>
-    <string>mqzoneshare</string>
-    <string>wtloginqzone</string>
-    <string>mqzonewx</string>
-    <string>mqzoneopensdkapiV2</string>
-    <string>mqzoneopensdkapi19</string>
-    <string>mqzoneopensdkapi</string>
-    <string>mqzoneopensdk</string>
-    <!--微信白名单-->
-    <string>wechat</string>
-    <string>weixin</string>
-</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>sinaweibohd</string>
+		<string>sinaweibo</string>
+		<string>weibosdk</string>
+		<string>weibosdk2.5</string>
+		<string>mqqapi</string>
+		<string>mqq</string>
+		<string>mqqOpensdkSSoLogin</string>
+		<string>mqqconnect</string>
+		<string>mqqopensdkdataline</string>
+		<string>mqqopensdkgrouptribeshare</string>
+		<string>mqqopensdkfriend</string>
+		<string>mqqopensdkapi</string>
+		<string>mqqopensdkapiV2</string>
+		<string>mqqopensdkapiV3</string>
+		<string>mqzoneopensdk</string>
+		<string>wtloginmqq</string>
+		<string>wtloginmqq2</string>
+		<string>mqqwpa</string>
+		<string>mqzone</string>
+		<string>mqzonev2</string>
+		<string>mqzoneshare</string>
+		<string>wtloginqzone</string>
+		<string>mqzonewx</string>
+		<string>mqzoneopensdkapiV2</string>
+		<string>mqzoneopensdkapi19</string>
+		<string>mqzoneopensdkapi</string>
+		<string>mqzoneopensdk</string>
+		<string>wechat</string>
+		<string>weixin</string>
+	</array>
 </dict>
 </plist>
